--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,27 @@
         />
 
     <EditText
+        android:id="@+id/edad_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Edad actual: "
         android:padding="16dp"
         android:inputType="number"/>
+
+    <TextView
+        android:id="@+id/resultado_texto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:padding="16dp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"/>
+
+    <Button
+        android:id="@+id/boton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calcular"
+        android:layout_margin="16dp"/>
 
 </LinearLayout>
